# ppt-to-kvkk-analyzer

./: .gitignore  ARA.bat  CALISTIR.bat  CHANGELOG.md  CONTRIBUTING.md  LICENSE  RAPOR_OLUSTUR.bat  README.md  SECURITY.md  config.toml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml
docs/: AI_CIKTI_KILAVUZU.py  AI_REHBERI.md  HIZLI_CEVAPLAR.md  KULLANIM_KILAVUZU.md
kvkk-visualizer/: BUILD.bat  README.md  pyproject.toml
kvkk-visualizer/output/cache/: law_pages.json  verbis_guide_pages.json  verbis_qa_pages.json
kvkk-visualizer/output/dashboard/: KVKK_Dashboard.html
kvkk-visualizer/src/: __init__.py  dashboard_builder.py  law_parser.py  pdf_extractor.py  verbis_parser.py
kvkk-visualizer/tests/: test_parsers.py
scripts/: ARA.bat  CALISTIR.bat  RAPOR_OLUSTUR.bat
src/: __init__.py  kvkk_rapor.py  ppt_to_vectors.py
tests/: __init__.py  test_basics.py
