[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ppt-to-kvkk-analyzer"
version = "1.2.0"
description = "PPT dosyalarını AI vektörlerine dönüştürür ve KVKK kanun değişikliklerini analiz eder"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Xtra01", email = "ekremregister@gmail.com" }]
keywords = ["kvkk", "gdpr", "pptx", "nlp", "vectorization", "legal-tech", "turkish", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Turkish",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "python-pptx>=1.0.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/Xtra01/ppt-to-kvkk-analyzer"
Repository = "https://github.com/Xtra01/ppt-to-kvkk-analyzer"
Issues    = "https://github.com/Xtra01/ppt-to-kvkk-analyzer/issues"

[project.scripts]
kvkk-analyze = "src.kvkk_rapor:main"
ppt-vectorize = "src.ppt_to_vectors:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=src --cov-report=term-missing"
